Feat/61 qr service (#103)
* qr scanner

* created mobile view from scan

* small save

* new viw

* mobile add asset

* finish qr sevrice
