# src/bouvet.assethub.ui/src/_generated/api-types.ts
@@ -12,8 +12,7 @@
 export interface AssetResponseDto {
   /** @format int32 */
   id?: number;
-  /** @format int32 */
-  serialNumberValue?: number;
+  serialNumberValue?: string;
   /** @format int32 */
   categoryId?: number;
   categoryName?: string;
@@ -27,10 +26,11 @@ export interface CategoryResponseDto {
 }
 
 export interface CreateAssetDto {
-  /** @format int32 */
-  serialNumber?: number;
+  serialNumber?: string;
   /** @format int32 */
   categoryId?: number;
+  /** @format uuid */
+  qrIdentifier?: string;
 }
 
 export interface CreateCategoryDto {
@@ -41,13 +41,13 @@ export interface CreateLoanDto {
   /** @format date-time */
   intervalStart?: string;
   /** @format date-time */
-  intervalStop?: string | null;
+  intervalStop?: string ;
   intervalIsLongterm?: boolean;
   /** @format int32 */
   assignedToValue?: number;
   /** @format int32 */
   assetId?: number;
-  bsdReference?: string;
+  bsdReference?: string | null;
 }
 
 export interface LoanHistoryResponseDto {
@@ -71,7 +71,7 @@ export interface LoanResponseDto {
   /** @format date-time */
   intervalStart?: string;
   /** @format date-time */
-  intervalStop?: string;
+  intervalStop?: string | null;
   intervalIsLongterm?: boolean;
   /** @format int32 */
   assignedToValue?: number;
